# Owner-avatar-projectarchive-group-4-rose-guardian

./: .gitignore  frames_2024-11-28_16.09.58.gv
src/rg_bringup/: CMakeLists.txt  package.xml
src/rg_bringup/install/: local_setup.sh  setup.bash  setup.sh
src/rg_bringup/install/rg_bringup/share/launch/: rg.rviz.launch.py
src/rg_bringup/install/rg_bringup/share/rg_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/rg_bringup/install/rg_bringup/share/rg_bringup/cmake/: rg_bringupConfig.cmake
src/rg_bringup/launch/: display_robot.launch.py  rg_state_publisher.launch.py
src/rg_bringup/log/: latest_build
src/rg_description/: CMakeLists.txt  package.xml
src/rg_description/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/rg_description/install/rg_description/share/ament_index/resource_index/package_run_dependencies/: rg_description
src/rg_description/install/rg_description/share/rg_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/rg_description/log/: latest_build
src/rg_description/src/urdf/: roseguardian.URDF
src/rg_description/urdf/: roseguardian.URDF
src/roseguardian_control/: CMakeLists.txt  package.xml
src/roseguardian_control/launch/: roseguardian_control.launch  roseguardian_gazebo_control.launch  roseguardian_rviz.launch  roseguardian_sim.launch
src/roseguardian_control/urdf/: roseguardian.gazebo  roseguardian.urdf  roseguardian.xacro
src/roseguardian_gazebo/: CMakeLists.txt  package.xml
src/roseguardian_gazebo/launch/: empty_world.launch  roseguardian_farm.launch  roseguardian_farm.launch.py
src/roseguardian_gazebo/worlds/: blank.world  myownworld.sdf  ownworldandrobot.sdf
