<?xml version="1.0"?>
<package format="3">
  <name>rg_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for Roseguardian robot</description>
  <maintainer email="mv.thimm@gmail.com">marius</maintainer>
  <license>BSD-3-Clause</license>  <!-- Add an appropriate license -->

  <!-- Build-time dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rg_description</build_depend>  <!-- Your description package -->
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>launch</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rg_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
