<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rg_description</name>
  <version>0.0.0</version>
  <description>Roseguardian Description files</description>
  <maintainer email="mv.thimm@gmail.com">marius</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build-time dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>rclcpp</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
