<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roseguardian_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mv.thimm@gmail.com">marius</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build-time dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roseguardian_description</exec_depend>
  <exec_depend>roseguardian_control</exec_depend> 
  <exec_depend>gazebo_ros_pkgs</exec_depend>

  <!-- Export package info -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
